[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "agent-cost-monitor"
version = "0.1.0"
description = "Track and analyze AI agent API costs across providers"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest"]
